version/0.2/_sources/api/_autosummary/ansys.meshing.prime.WarningCode.rst.txt
WarningCode
===========

.. currentmodule:: ansys.meshing.prime

.. autoclass:: WarningCode
   
   
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      WarningCode.NOWARNING
      WarningCode.UNKNOWN
      WarningCode.SURFER_QUADCLEANUP_MULTITHREADINGNOTSUPPORTED
      WarningCode.OVERRIDECURVATURESIZINGPARAMS
      WarningCode.OVERRIDESOFTSIZINGPARAMS
      WarningCode.OVERRIDEHARDSIZINGPARAMS
      WarningCode.OVERRIDEPROXIMITYSIZINGPARAMS
      WarningCode.OVERRIDEBOISIZINGPARAMS
      WarningCode.OVERRIDEMESHEDSIZINGPARAMS
      WarningCode.OVERRIDESUGGESTEDNAME
      WarningCode.OVERRIDESURFACESCOPEENTITY
      WarningCode.OVERRIDEVOLUMESCOPEENTITY
      WarningCode.MAXOFPRISMCONTROLSMINASPECTRATIO
      WarningCode.SURFERLAYEREDQUADFAILED
      WarningCode.SURFERDEGENERATEFACE
      WarningCode.ALIGN_OPERATIONINTERRUPTED
      WarningCode.IGA_NOGEOMZONELETFORSPLINEFITTING
      WarningCode.NOHOLESFOUNDONPLANE
      WarningCode.NOVOLUMESCOMPUTED
      WarningCode.EXTERNALOPENFACEZONELETSFOUND
      WarningCode.NOVOLUMESENCLOSINGMATERIALPOINT
      WarningCode.EXTERNALOPENTOPOFACESFOUND
      WarningCode.FACEZONELETSWITHOUTVOLUMES
      WarningCode.WRAPPER_SIZECONTROLNOTDEFINED
      WarningCode.WRAPPER_SIZECONTROLNOTSUPPORTED
      WarningCode.WRAPPER_SMALLERSIZEATFEAURES
      WarningCode.WRAPPER_SMALLERCONTACTPREVENTIONSIZE
      WarningCode.MATERIALPOINTWITHSAMENAMEEXISTS
      WarningCode.ENTITIESNOTBELONGTOANYZONE
      WarningCode.INVALIDENTITIESNOTADDEDTOZONE
      WarningCode.LOCALSURFERNOFACEREGISTERED
      WarningCode.MESHHASNONPOSITIVEVOLUMES
      WarningCode.MESHHASNONPOSITIVEAREAS
      WarningCode.MESHHASINVALIDSHAPE
      WarningCode.MESHHASLEFTHANDEDNESSFACES
      WarningCode.DUPLICATEINPUT
   
   